Interface dos produtos ajustada. Gerenciamento dos produtos pelo /AppAdmin finalizado, podendo criar, editar, excluir e visualizar o produto.

--- a/DeliveryApp/Views/AppAdmin/Index.cshtml
+++ b/DeliveryApp/Views/AppAdmin/Index.cshtml
@@ -8,7 +8,7 @@
 
 <!-- Button trigger modal -->
 
-<a class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#modalUsuarios">
+<a class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#modalUsuarios">
     Gerenciar Usuários
 </a>
 
@@ -34,7 +34,7 @@
 
 <!-- Button trigger modal -->
 
-<a class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<a class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
     Gerenciamento do Site
 </a>
 
