--- a/DeliveryApp/Views/Shared/Components/Menu/Default.cshtml
+++ b/DeliveryApp/Views/Shared/Components/Menu/Default.cshtml
@@ -2,7 +2,7 @@
 
 <div class="dropdown mx">
 
-    <button class="btn btn-secondary dropdown-toggle px-4" style="background-color:#FF7000; color:#2D2D2D" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <button class="btn btn-primary dropdown-toggle px-4" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 
         Olá, @Model.Username
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M12 2A10.13 10.13 0 0 0 2 12a10 10 0 0 0 4 7.92V20h.1a9.7 9.7 0 0 0 11.8 0h.1v-.08A10 10 0 0 0 22 12 10.13 10.13 0 0 0 12 2zM8.07 18.93A3 3 0 0 1 11 16.57h2a3 3 0 0 1 2.93 2.36 7.75 7.75 0 0 1-7.86 0zm9.54-1.29A5 5 0 0 0 13 14.57h-2a5 5 0 0 0-4.61 3.07A8 8 0 0 1 4 12a8.1 8.1 0 0 1 8-8 8.1 8.1 0 0 1 8 8 8 8 0 0 1-2.39 5.64z"></path><path d="M12 6a3.91 3.91 0 0 0-4 4 3.91 3.91 0 0 0 4 4 3.91 3.91 0 0 0 4-4 3.91 3.91 0 0 0-4-4zm0 6a1.91 1.91 0 0 1-2-2 1.91 1.91 0 0 1 2-2 1.91 1.91 0 0 1 2 2 1.91 1.91 0 0 1-2 2z"></path></svg>
@@ -11,9 +11,8 @@
     <ul class="dropdown-menu w-100">
         @if (Model.Type.ToUpper() == "ADMIN")
         {
-            <li><a class="dropdown-item text-dark text-truncate" asp-action="Index" asp-controller="GerenciadorUsuarios">Gerenciar usuários</a></li>
+            <li><a class="dropdown-item text-dark text-truncate" asp-action="Index" asp-controller="UsersManagement">Gerenciar usuários</a></li>
         }
-        @*<li><a class="dropdown-item text-dark" href="#">Something else here</a></li>*@
-        <li><a class="dropdown-item text-dark" asp-area="" asp-controller="Login" asp-action="Sair">Sair</a></li>
+        <li><a class="dropdown-item text-dark" asp-area="" asp-controller="Login" asp-action="Exit">Sair</a></li>
     </ul>
 </div>
