--- a/DeliveryApp/Views/Home/Cart.cshtml
+++ b/DeliveryApp/Views/Home/Cart.cshtml
@@ -8,7 +8,7 @@
 
 }
 
-<div class="cart-table-area section-padding-100">
+<div class="cart-table-area section-padding-100 bg-white">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-lg-8">
@@ -82,7 +82,7 @@
                     <li><span>Taxa de Entrega:</span> <span>@fee</span></li>
                     <li><span class="fw-bold">Total:</span> @((totalProducts + fee).ToString("F2"))<span></span></li>
                 </ul>
-                <div class="btn btn-primary">
+                <div class="btn btn-primary mb-2">
                     <a class="btn btn-primary w-100 ">Checkout</a>
                 </div>
             </div>
@@ -106,13 +106,13 @@
             <div class="modal-body">
                 <p>Deseja limpar o carrinho?</p>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                @using (Html.BeginForm("ClearCart", "Home", FormMethod.Post))
-                {
+            <form method="post" enctype="multipart/form-data" asp-action="ClearCart">
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                     <button type="submit" class="btn btn-primary ">Confirmar</button>
-                }
-            </div>
+                </div>
+            </form>
+            
         </div>
     </div>
 </div>
