--- a/DeliveryApp/Views/Product/Details.cshtml
+++ b/DeliveryApp/Views/Product/Details.cshtml
@@ -1,5 +1,39 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model DeliveryApp.Models.Product
 @{
+    ViewData["Title"] = "Novo Produto";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
+
+<h1 style="text-decoration:none; color: #2d2d2d; font-weight: bold;">Detalhes</h1>
+<div>
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(x => x.Name)
+        </dt>
+        <dt class="col-sm-10">
+            @Html.DisplayFor(x => x.Name)
+        </dt>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(x => x.Details)
+        </dt>
+        <dt class="col-sm-10">
+            @Html.DisplayFor(x => x.Details)
+        </dt>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(x => x.Price)
+        </dt>
+        <dt class="col-sm-10">
+            @Html.DisplayFor(x => x.Price)
+        </dt>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(x => x.Image)
+        </dt>
+        <dt>
+            <img src="@Model.Image" class="img-thumbnail" style="height:150px;width:150px;" />
+        </dt>
+
+
+    </dl>
+</div>
+<a asp-action="Edit" asp-route-id="@Model.Id" style="text-decoration:none; color: #ff6000; font-weight: bold;">Editar</a> |
+<a asp-action="Index" style="text-decoration:none; color: #2d2d2d; font-weight: bold;">Voltar</a>
