--- a/DeliveryApp/Views/Shared/_LayoutLogin.cshtml
+++ b/DeliveryApp/Views/Shared/_LayoutLogin.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <div class="container">
+    <div class="container gradientDiv">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
