Sistema de gerenciamento de usuario concluido

--- a/DeliveryApp/Views/UsersManagement/Index.cshtml
+++ b/DeliveryApp/Views/UsersManagement/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Usuários</h2>
 
 <div class="botao-planos">
-    <a class="text-white btn btn-dark w-25 p-1" asp-action="Criar">Novo Usuário</a>
+    <a class="text-white btn btn-dark w-25 p-1" asp-action="New">Novo Usuário</a>
 </div>
 
 
@@ -45,9 +45,9 @@
                     @Html.DisplayFor(model => item.Type)
                 </td>
                 <td>
-                    <a style="text-decoration:none; color: #FF6000; font-weight: bold;" asp-action="Editar" asp-route-id="@item.Id">Editar</a> |
-                    <a style="text-decoration:none; color: #2d2d2d; font-weight: bold;" asp-action="Detalhes" asp-route-id="@item.Id">Detalhes</a> |
-                    <a style="text-decoration:none; color: #ed2e38; font-weight: bold;" asp-action="Deletar" asp-route-id="@item.Id">Deletar</a>
+                    <a style="text-decoration:none; color: #FF6000; font-weight: bold;" asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                    <a style="text-decoration:none; color: #2d2d2d; font-weight: bold;" asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                    <a style="text-decoration:none; color: #ed2e38; font-weight: bold;" asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
                 </td>
             </tr>
         }
