--- a/DeliveryApp/Views/AppAdmin/Index.cshtml
+++ b/DeliveryApp/Views/AppAdmin/Index.cshtml
@@ -22,7 +22,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <a class="btn btn-outline-dark" asp-action="Index" asp-controller="GerenciadorUsuarios">Gerenciar usuários</a>
+                <a class="btn btn-outline-dark" asp-action="Index" asp-controller="UsersManagement">Gerenciar usuários</a>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Fechar</button>
