--- a/DeliveryApp/Views/UsersManagement/Details.cshtml
+++ b/DeliveryApp/Views/UsersManagement/Details.cshtml
@@ -1,6 +1,6 @@
-﻿@model DeliveryApp.Models.Product
+﻿@model DeliveryApp.Models.UserLogin
 @{
-    ViewData["Title"] = "Novo Produto";
+    ViewData["Title"] = "Detalhes do Usuário";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -8,31 +8,29 @@
 <div>
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(x => x.Name)
+            @Html.DisplayNameFor(x => x.Username)
         </dt>
         <dt class="col-sm-10">
-            @Html.DisplayFor(x => x.Name)
+            @Html.DisplayFor(x => x.Username)
         </dt>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(x => x.Details)
+            @Html.DisplayNameFor(x => x.Email)
         </dt>
         <dt class="col-sm-10">
-            @Html.DisplayFor(x => x.Details)
+            @Html.DisplayFor(x => x.Email)
         </dt>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(x => x.Price)
+            @Html.DisplayNameFor(x => x.Password)
         </dt>
         <dt class="col-sm-10">
-            @Html.DisplayFor(x => x.Price)
+            @Html.DisplayFor(x => x.Password)
         </dt>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(x => x.Image)
+            @Html.DisplayNameFor(x => x.Type)
         </dt>
-        <dt>
-            <img src="@Model.Image" class="img-thumbnail" style="height:150px;width:150px;" />
+        <dt class="col-sm-10">
+            @Html.DisplayFor(x => x.Type)
         </dt>
-
-
     </dl>
 </div>
 <a asp-action="Index" style="text-decoration:none; color: #2d2d2d; font-weight: bold;">Voltar</a> |
