--- a/DeliveryApp/Views/Home/Index.cshtml
+++ b/DeliveryApp/Views/Home/Index.cshtml
@@ -2,48 +2,48 @@
 
 @{
     ViewData["Title"] = "Home Page";
-    int num = 0;
-    string classTr;
 }
 
+
 <div class="container py-5">
+
     <div class="row text-center text-white mb-5">
+
         <div class="col-lg-7 mx-auto">
             <h1 class="display-4">Faça o seu pedido.</h1>
         </div>
+
     </div>
+
     <div class="row">
+
         <div class="col-lg-8 mx-auto">
+
             <!-- List group-->
             <ul class="list-group shadow">
+
                 @foreach (var item in Model)
                 {
                     <!-- list group item-->
-                    <li class="list-group-item">
-                        <!-- Custom content-->
-                        <div class="media align-items-lg-center flex-column flex-lg-row p-3">
-                            <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2">@item.Name</h5>
-                                <p class="font-italic text-muted mb-0 small">@item.Details</p>
-                                <div class="d-flex align-items-center justify-content-between mt-1">
-                                    <h6 class="font-weight-bold my-2">R$@item.Price</h6>
-                                </div>
-                            </div>
-                            <img src="@item.Image" alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2 img-product mb-1">
-                            @using (Html.BeginForm("AddToCartFromHome", "Home", new { @idProduct = item.Id }, FormMethod.Post))
-                            {
-                                <button type="submit" class="btn text-light bg-primary">Adicionar ao carrinho</button>
-                            }
-                        </div> <!-- End -->
-                    </li> <!-- End -->
+                    @await Component.InvokeAsync("Products", item)
+                    ;
                 }
-                
+
             </ul> <!-- End -->
+
         </div>
+
     </div>
+
 </div>
 
+<!-- include jquery libraries -->
+@section Scripts{
 
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-ajax-unobtrusive@3.2.6/dist/jquery.unobtrusive-ajax.min.js"></script>
+
+}
 @*<div class="text-center">
     <h1 class="display-4">Bem Vindo</h1>
     <p>Faça o seu pedido.</p>
